Closed Bug 1796075 Opened 3 years ago Closed 3 years ago

-Wempty-body warnings in NSS

Categories

(NSS :: Libraries, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2022-10-19T08:34:25.260Z] 08:34:25     INFO -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c: In function 'secmod_ParseModuleSpecForTokens':
[task 2022-10-19T08:34:25.260Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1183:77: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.260Z] 08:34:25     INFO -   1183 |                                   if (convert) { modulePrev = moduleSpec; });
[task 2022-10-19T08:34:25.261Z] 08:34:25     INFO -        |                                                                             ^
[task 2022-10-19T08:34:25.261Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1185:77: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.261Z] 08:34:25     INFO -   1185 |                                   if (convert) { modulePrev = moduleSpec; });
[task 2022-10-19T08:34:25.262Z] 08:34:25     INFO -        |                                                                             ^
[task 2022-10-19T08:34:25.262Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1196:37: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -   1196 |                                   });
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -        |                                     ^
[task 2022-10-19T08:34:25.264Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1207:37: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -   1207 |                                   });
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -        |                                     ^
[task 2022-10-19T08:34:25.264Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1218:37: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -   1218 |                                   });
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -        |                                     ^
[task 2022-10-19T08:34:25.264Z] 08:34:25    ERROR -  /builds/worker/checkouts/gecko/security/nss/lib/pk11wrap/pk11pars.c:1229:37: error: suggest braces around empty body in an 'else' statement [-Werror=empty-body]
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -   1229 |                                   });
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -        |                                     ^
[task 2022-10-19T08:34:25.264Z] 08:34:25     INFO -  cc1: all warnings being treated as errors
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.85
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: