Bug 1796075 - Fix -Wempty-body warnings. r=nss-reviewers,mt

Differential Revision: https://phabricator.services.mozilla.com/D159675